# insides-web-viewer

./: .gitignore  CLAUDE.md  README.md  progress.md  pyproject.toml  requirements.txt
client/: index.html  package-lock.json  package.json  playwright.config.ts
client/src/: App.tsx  index.css  store.ts
ref_code/: Readme.md  TDYPre.sln  editor.sln  parseplugin.sln  plugins.sln
ref_code/General_Tools/: DBStructures.h  General_Tools.def  General_Tools.vcproj  General_Tools.vcxproj  Hash.cpp  Hash.h  ReadMe.txt  VBOctree.cpp  VBOctree.h  VBTree.cpp  VBTree.h  VDListCtnr.cpp  VDListCtnr.h  VListCtnr.cpp  VListCtnr.h  VMemMgr.cpp  VMemMgr.h  Vds_Core_Def.h  Vds_DataTypes.h  Vds_SysCalls.cpp  Vds_SysCalls.h  Vds_VectorFuncs.cpp  Vds_constants.h  Version.cpp  Version.h  WorkPlane.cpp  WorkPlane.h  vds_VectorFuncs.h  vds_crc.h  vds_mem.cpp  vds_mem.h  vds_structures.h
ref_code/ImportDemo/: IFileExchange.h  ImportDemo.vcxproj  ImportDemo.vcxproj.filters  importdemo.cpp  importdemo.h  importdemo_global.h
ref_code/PyTools/: PyTools.py  PyTools.pyproj
ref_code/base/: AnimationControler.cpp  AnimationControler.h  AnimationToolbar.cpp  AnimationToolbar.h  AppConfiguration.cpp  AppConfiguration.h  ApplicationInfo.cpp  ApplicationInfo.h  BaseClass.cpp  BaseClass.h  BoundBox.h  CMDialogFactory.cpp  CMDialogFactory.h  Console.cpp  Console.h  (+85 more)
server/: config.py  main.py
tests/: test_api.py  test_contour.py  test_mnf_parser.py  test_model.py  test_overview_parser.py  test_parser.py  test_res_reader.py  test_result_manager_api.py  test_stl_geometry.py  test_topo_parser.py
(+1124 files in other folders)
